# fifa_world_cup

./: analisys_fifa_wc.ipynb  analisys_fifa_wc.py  fifa_wc.py  fifa_world_cup_matches.csv  pyproject.toml
